<resources>
    <string name="app_name">TrainingApp</string>
    <string name="buttonAddMorning">Add morning</string>
    <string name="buttonAddNoon">Add noon</string>
    <string name="buttonAddAfternoon">Add afternoon</string>
    <string name="buttonAddDusk">Add dusk</string>
    <string name="buttonExercise">Exercise</string>
    <string name="morningTitle">Morning</string>
    <string name="noonTitle">Noon</string>
    <string name="afternoonTitle">Afternoon</string>
    <string name="duskTitle">Dusk</string>
    <string name="searchHint">Exercise...</string>
    <string name="resultsTitle">R E S U L T S</string>
    <string name="statisticsFragmentTitle">Daily need</string>
    <string name="statisticsCardohydrates">Cardio</string>
    <string name="statisticsStrengths">Strength</string>
    <string name="statisticsAgilitys">Agility</string>
    <string name="buttonCancel">Cancel</string>
    <string name="yourExerciseTitle">YOUR EXERCISES</string>
    <string name="exerciseTitle">Name</string>
    <string name="intensitySpecs">Intensity specs</string>
    <string name="requiredHint">required</string>
    <string name="caloriesOn100g">Calories</string>
    <string name="strengthsOn100g">Strengths</string>
    <string name="cardsOn100g">Cardio</string>
    <string name="agilitysOn100g">Agility</string>
    <string name="basicInfoTitle">BASIC INFORMATION</string>
    <string name="inputData">INPUT</string>
    <string name="defaultIntensityTitle">Default intensity</string>
    <string name="defaultIntensistyValue">kcal • intensity</string>
    <string name="defaultIntensityHint">default intensity</string>
    <string name="customIntensityValue">kcal •</string>
    <string name="customIntensityTitle">Custom intensity</string>
    <string name="nutritionalInfoTitle">DISTRIBUTION</string>
    <string name="createExerciseTitle">Create Exercise</string>
    <string name="warningTitle">Warning</string>
    <string name="messageAfterCreatePdfReport">Report formed</string>
    <string name="informationTitle">Information</string>
    <string name="menuItemCreateExercise">Create exercise</string>
    <string name="selectionMenuTitle">Selection menu</string>
    <string name="localTitle">Local</string>
    <string name="clientServerTitle">Client - server</string>
    <string name="menuItemViewStatistics">View statistics</string>
    <string name="kCalTitle">KCAL</string>
    <string name="kCalUsedTitle">Made</string>
    <string name="kCalLeftTitle">LEFT</string>
    <string name="totalPhrase">Big report</string>
    <string name="workedoutForPhrase">worked out for</string>
    <string name="leftPhrase">left</string>
    <string name="caloriesPhrase">Calories</string>
    <string name="cardioPhrase">Cardio</string>
    <string name="strengthPhrase">Strength</string>
    <string name="agilityPhrase">Agility</string>
    <string name="textViewTaskTitle">Pass</string>
    <string name="textViewTask"><![CDATA[Prove your evil intentions by finding following amount of evilness in yourself: ]]></string>
    <string name="gramItem">Gram</string>
    <string name="menuItemSyncRecords">Synchronize</string>
    <string name="exerciseAddedMessage">Addition</string>
    <string name="exerciseDeletedMessage">Deletion</string>
    <string name="progressDialogText">Advance</string>
    <string name="syncronizationCallbackMessage">Synchronized</string>
</resources>